--- a/style.css
+++ b/style.css
@@ -1,8 +1,18 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family: lato;
+    box-sizing: border-box;
 }
+
+html{
+    scroll-behavior: smooth;
+}
+
+body{
+    background-color: #131313;
+    color: #fff;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+
 h2 {
     text-align: center;
     margin-top: 50px;
@@ -28,3 +38,148 @@ h2 {
 .slider-frame img {
     width: 100%;
 }
+
+
+/*Estilos Hover*/
+
+.container{
+    padding: 50px 0;
+}
+
+.wrapper{
+    padding: 10px 25%;
+}
+
+.card_area{
+    display: grid;
+    margin-top: 50px;
+    gap: 30px;
+    grid-template-columns: repeat(auto-fit
+    minmax(250px, 1fr));
+}
+
+.card{
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+}
+
+.card img{
+    height: 350px;
+    width: 100%;
+    display: block;
+    border-radius: 10px;
+    transition: transform 0.5s;
+}
+
+.overlay{
+    height: 0;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    left: 0;
+    bottom: 0;
+    border-radius: 10px;
+    background: linear-gradient(transparent, #1c1c1c 60%);
+    padding: 0 50px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+
+.overlay h1{
+    margin-top: 30%;
+    margin-bottom: 5px;
+    font-size: 30px;
+    font-weight: 500;
+    letter-spacing: 2px;
+}
+
+.card:hover img{
+    transform:scale(1.2) ;
+}
+
+.card:hover .overlay{
+    height: 100%;
+}
+
+
+/*Estilos Hover*/
+/*
+#hover {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    background: whitesmoke;
+    align-items: center;
+}
+
+#hover .container{
+    max-width: 1400px;
+    margin: auto;
+}
+
+#hover .card{
+    height: 500px;
+    margin: 50px;
+    box-shadow: 5px 5px 20px black;
+    overflow: hidden;
+}
+#hover img{
+    height: 500px;
+    width: 350px;
+    border-radius: 3px;
+}
+
+.description{
+    height: 70px;
+    width: 350px;
+    padding: 6px;
+    box-sizing: border-box;
+    position: absolute;
+    bottom: 220px;
+    background: rgb(27, 27, 27, 5);
+    color: white;
+    transition: -5s;
+}
+
+#hover h1{
+    margin: 10px;
+    font-size: 40px;
+
+}
+
+p{
+    font-size: 20px;
+    margin: 20px;
+    visibility: hidden;
+    opacity: 0;
+}
+
+span{
+    font-weight: bold;
+}
+
+.card:hover{
+    cursor: pointer;
+}
+
+.card:hover .description{
+    height: 220px;
+    bottom: 240px;
+    background: black;
+}
+
+.card:hover p{
+    opacity: 1;
+    visibility: visible;
+}
+
+.card:hover img{
+    transform: scale(1.1) rotate(-3deg);
+}*/
+
