--- a/styles.css
+++ b/styles.css
@@ -9,10 +9,134 @@ body{
     font-family:Arial, Helvetica, sans-serif;
 }
 
+/*Estilos slider*/
+.card-wrapper {
+    max-width: 1500px;
+    margin: 0 80px 35px;
+    padding: 20px 10px;
+    overflow: hidden;
+}
+
+.card-list .card-item{
+    list-style: none;
+}
+
+.card-list .card-item .card-link {
+    user-select: none;
+    display: block;
+    background: #d9d8ce;
+    padding: 15px;
+    border-radius: 12px;
+    text-decoration: none;
+    border: 2px solid transparent;
+    box-shadow: 0 10px 10px black;
+}
+
+.card-list .card-item .card-link:active {
+    cursor: grabbing;
+}
+
+.card-list .card-item .card-link:hover {
+    border-color: #5372F0;
+}
+
+.card-list .card-link .card-image {
+    width: 100%;
+    aspect-ratio: 15/10;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.card-list .card-link .badge {
+    color: #5372F0;
+    padding: 8px 16px;
+    font-size: 0.95rem;
+    font-weight: 500;
+    margin: 16px 0 18px;
+    background: whitesmoke;
+    width: fit-content;
+    border-radius: 50px; 
+}
+
+.card-list .card-link .badge.Coveñas {
+   color:#5372F0; 
+   background: white;
+   
+}
+
+.card-list .card-link .badge.Bogota {
+    color:#5372F0; 
+    background: white;
+ }
+
+ .card-list .card-link .badge.Amazonas {
+    color:#5372F0; 
+    background: white;
+ }
+
+ .card-list .card-link .badge.Coveñas {
+    color:#5372F0; 
+    background: white;
+ }
+
+.card-list .card-link .card-title {
+    font-size: 1.19rem;
+    color: black;
+    font-weight: 400;
+}
+
+.card-list .card-link .card-button {
+    height: 35px;
+    width: 35px;
+    color: #5372F0;
+    border-radius: 50%;
+    margin: 30px 0 5px;
+    background: none;
+    cursor: pointer;
+    border: 2px solid #5372F0;
+    transform: rotate(-40deg);
+    transition: 0.4s ease;
+
+}
+
+.card-list .card-link:hover .card-button {
+    color: white;
+    background: #5372F0;
+}
+
+.card-wrapper .swiper-pagination-bullet{
+    height: 13px;
+    width: 13px;
+    opacity: 0.5;
+    background: #0427b0;
+}
+
+.card-wrapper .swiper-pagination-bullet-active{
+    opacity: 1;
+}
+
+.card-wrapper .swiper-slide-button {
+    color: #1212e8;
+    margin-top: -10px;
+}
+
+@media screen and (max-width:768px) {
+    .card-wrapper {
+        margin: 0 10px 25px;
+    }
+    .card-wrapper .swiper-slide-button {
+        display: none;
+    }
+}
+
+
+
+/*Estilos hover*/
 .wrap{
     max-width: 1100;
     width: 90%;
     margin: auto;
+    margin-top: 150px;
 }
 
 .wrap > h1{
